# EaSTBIM

./: .gitmodules  BIM.cpp  BIM.h  CMakeLists.txt  Geometry.cpp  Geometry.h  IO.cpp  IO.h  README.md  Topology.cpp  Topology.h  Transform.cpp  Transform.h  Visualizer.cpp  Visualizer.h  main.cpp
data/: AsBuilt_Ilgi Moble Building.ifc  AsDamaged_Ilgi Moble Building.ifc  FacadeAsBuiltTurkeySchool.ifc  FacadeAsBuiltTurkeySchool.ifc.txt  FacadeAsBuilt_Ilgi Moble Building.ifc  FacadeAsBuilt_Ilgi Moble Building.ifc.txt  FacadeAsDamaged_Ilgi Moble Building.ifc  FacadeAsDamaged_Ilgi Moble Building.ifc.txt  IfcOpenHouse.ifc  TurkishBuiltFacade_joints.ifc  TurkishDamagedFacade_Ashrant.ifc  TurkishDamagedFacade_Ashrant.ifc.txt  beam_as-built.ifc  house.ifc  parameters.xls
excel/: Examples.cpp
