cmake_minimum_required(VERSION 3.0)
project(EaSTBIM)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES main.cpp IO.cpp IO.h)
add_executable(EastBIM ${SOURCE_FILES})
target_link_libraries(EastBIM ${PCL_LIBRARIES})
